Fix styling on mobile for cheap car results page

--- a/styles/Results.module.css
+++ b/styles/Results.module.css
@@ -459,7 +459,8 @@
     }
 
     .motorTypeCheap,
-    .bodyTypeCheap {
+    .bodyTypeCheap,
+    .detailsButtonContainer {
         display: none;
     }
 
